[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ginkgo"
version = "0.8.1"
description = "Python Backtesting library for trading research"
readme = "README.md"
license = {text = "MIT"}
authors = [
    {name = "suny", email = "sun159753@gmail.com"}
]
maintainers = [
    {name = "suny", email = "sun159753@gmail.com"}
]
keywords = ["quantitative", "trading", "backtesting", "finance", "investment"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Financial and Insurance Industry",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9", 
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Office/Business :: Financial :: Investment",
    "Topic :: Scientific/Engineering :: Information Analysis",
]
requires-python = ">=3.8"

# 核心依赖 - 从requirements.txt中提取的关键包
dependencies = [
    "aiohttp>=3.12.0",
    "anyio>=4.0.0",
    "attrs>=25.0.0",
    "baostock>=0.8.9",
    "beautifulsoup4>=4.13.0",
    "black>=25.0.0",
    "certifi>=2025.0.0",
    "charset-normalizer>=3.4.0",
    "click>=8.1.0",
    "clickhouse-connect>=0.8.0",
    "cloudpickle>=3.1.0",
    "colorama>=0.4.6",
    "dask>=2025.7.0",
    "fastapi>=0.116.0",
    "gunicorn>=23.0.0",
    "hiredis>=2.4.0",
    "httptools>=0.6.0",
    "huggingface-hub>=0.34.0",
    "jinja2>=3.1.0",
    "jsonschema>=4.25.0",
    "lz4>=4.4.0",
    "mmh3>=5.2.0",
    "mypy>=1.17.0",
    "numpy>=2.3.0",
    "packaging>=24.1.0",
    "pandas>=2.3.0",
    "prometheus-client>=0.22.0",
    "protobuf>=6.31.0",
    "psutil>=6.0.0",
    "psycopg>=3.2.0",
    "psycopg-pool>=3.2.0",
    "pyarrow>=17.0.0",
    "pydantic>=2.10.0",
    "pygments>=2.19.0",
    "pyjwt>=2.10.0",
    "pymysql>=1.1.0",
    "python-dateutil>=2.9.0",
    "python-dotenv>=1.1.0",
    "pytz>=2025.2",
    "pyyaml>=6.0.0",
    "redis>=4.6.0",
    "requests>=2.32.0",
    "rich>=13.0.0",
    "six>=1.17.0",
    "sqlalchemy>=2.0.0",
    "starlette>=0.47.0",
    "tabulate>=0.9.0",
    "tenacity>=8.5.0",
    "termcolor>=2.4.0",
    "tqdm>=4.67.0",
    "tushare>=1.2.0",
    "typer>=0.9.0",
    "typing-extensions>=4.14.0",
    "urllib3>=2.5.0",
    "uvicorn>=0.34.0",
    "uvloop>=0.21.0",
    "websockets>=15.0.0",
    "zstandard>=0.23.0",
]

# 可选依赖组
[project.optional-dependencies]
# 开发环境依赖
dev = [
    "black>=25.0.0",
    "mypy>=1.17.0", 
    "pytest>=8.0.0",
    "pytest-asyncio>=0.24.0",
    "pytest-cov>=5.0.0",
    "ruff>=0.8.0",
    "pre-commit>=4.0.0",
]

[project.urls]
Homepage = "https://github.com/Kaoruha/GinkGO"
Repository = "https://github.com/Kaoruha/GinkGO"
Documentation = "https://github.com/Kaoruha/GinkGO/blob/master/README.md"
Changelog = "https://github.com/Kaoruha/GinkGO/blob/master/CHANGELOG.md"
"Bug Tracker" = "https://github.com/Kaoruha/GinkGO/issues"

# setuptools配置
[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
"*" = ["*.yaml", "*.yml", "*.json", "*.xml"]

# 工具配置
[tool.black]
line-length = 120
target-version = ['py38', 'py39', 'py310', 'py311', 'py312']
include = '\.pyi?$'
extend-exclude = '''
/(
  # 排除的目录
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
)/
'''

[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
warn_unreachable = true
strict_equality = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py", "*_test.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "--strict-markers",
    "--strict-config",
    "--verbose",
    "--cov=ginkgo",
    "--cov-report=term-missing",
    "--cov-report=html",
    "--cov-report=xml",
]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "integration: marks tests as integration tests",
    "unit: marks tests as unit tests",
]
